--- a/package.json
+++ b/package.json
@@ -21,8 +21,11 @@
     "@angular/router": "~8.2.14",
     "bootstrap": "^4.4.1",
     "jquery": "^3.4.1",
+    "jwt-decode": "^2.2.0",
     "popper.js": "^1.16.0",
     "rxjs": "~6.4.0",
+    "sweetalert2": "^9.5.4",
+    "ts-md5": "^1.2.7",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
