--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "bootstrap": "^4.4.1",
     "jquery": "^3.4.1",
     "jwt-decode": "^2.2.0",
+    "nepali-date": "^0.1.3",
+    "number-to-words": "^1.2.4",
     "popper.js": "^1.16.0",
     "rxjs": "~6.4.0",
     "sweetalert2": "^9.5.4",
