--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "jwt-decode": "^2.2.0",
     "nepali-date": "^0.1.3",
     "ngx-filter-pipe": "^2.1.2",
+    "ngx-nepali-number-to-words": "0.0.1",
     "number-to-words": "^1.2.4",
     "popper.js": "^1.16.0",
     "rxjs": "~6.4.0",
