--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "nepali-date": "^0.1.3",
     "ngx-filter-pipe": "^2.1.2",
     "ngx-nepali-number-to-words": "0.0.1",
+    "ngx-nepali-unicode": "0.0.2",
     "number-to-words": "^1.2.4",
     "popper.js": "^1.16.0",
     "rxjs": "~6.4.0",
