--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "jquery": "^3.4.1",
     "jwt-decode": "^2.2.0",
     "nepali-date": "^0.1.3",
+    "nepali-number": "^1.0.3",
     "ngx-filter-pipe": "^2.1.2",
     "ngx-nepali-number-to-words": "0.0.1",
     "ngx-nepali-unicode": "0.0.2",
